--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,13 @@
 steps:
 # Build the container image
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/central-rush-367623/flaskworldapp1', '.']
+  args: ['build', '-t', 'gcr.io/$flask-368911/flask', '.']
 # Push the container image to Container Registry
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/central-rush-367623/flaskworldapp1']
+  args: ['push', 'gcr.io/$flask-368911/flask']
 # Deploy container image to Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
-  args: ['run', 'deploy', 'flaskworldapp1', '--image', 'gcr.io/central-rush-367623/flaskworldapp1', '--region', 'us-central1', '--platform', 'managed','--port','80']
+  args: ['run', 'deploy', 'flask', '--image', 'gcr.io/$flask-368911/flask', '--region', 'us-central1', '--platform', 'managed','--port','80']
 images:
-- gcr.io/central-rush-367623/flaskworldapp1
+- gcr.io/$flask-368911/flask
